# Kome

./: .gitignore  README.md  pyproject.toml
deploy/: install_service.sh  kome.env.example
deploy/systemd/: kome-assistant.service
docs/: architecture.md
src/kome_assistant/: __init__.py  cli.py
src/kome_assistant/core/: benchmark.py  contracts.py  eval_suite.py  observability.py  orchestrator.py  router.py  voice_loop.py  wake_calibration.py
src/kome_assistant/integrations/: __init__.py  audio_arbitration.py  audio_devices.py  audio_input.py  audio_output.py  factory.py  llm_planner.py  stt.py  tts.py  vad.py  wake_word.py
src/kome_assistant/memory/: state_store.py
src/kome_assistant/tools/: __init__.py  builtin.py  registry.py
src/kome_assistant/web/: server.py
src/kome_assistant/web/static/: app.js  index.html  mic-worklet.js  styles.css
tests/: test_adaptive_chunk.py  test_audio_cli_options.py  test_audio_input.py  test_barge_in.py  test_benchmark.py  test_eval_suite.py  test_factory.py  test_observability.py  test_router.py  test_stt_errors.py  test_stt_mock_binary.py  test_tool_policy.py  test_tools.py  test_voice_loop.py  test_wake_word.py
