[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kome-assistant"
version = "0.1.0"
description = "Local-first smart clock assistant brain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
voice = [
	"faster-whisper>=1.0.0",
	"numpy>=1.26",
]

[project.scripts]
kome = "kome_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
